ecmascript/parser/tests/typescript-errors/tsc/decorators/class/accessor/decoratorOnClassAccessor3/input.ts.stderr
error: Unexpected token `@`. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/typescript-errors/tsc/decorators/class/accessor/decoratorOnClassAccessor3/input.ts:6:12
  |
6 |     public @dec get accessor() { return 1; }
  |            ^

